@@ -2,6 +2,8 @@
 	* New features:
 		- Add string/bit operations: getbit, setbit, bitcount, strlen, substr(getrange)(2014-06-07)
 		- Put multi_*get commands to execute in worker thread(2014-06-17)
+	* Incompatible changes:
+		- Inlucde links, total_calls in info cmd's reply(2014-06-17)
 
 * 1.6.8.7
 	* New features:
